# ccenv

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
ccenv-market/.claude-plugin/: marketplace.json
ccenv-market/ccenv/.claude-plugin/: plugin.json
ccenv-market/ccenv/commands/: create.md  extract.md  list.md  show.md  use.md
docs/: README.md  architecture.md
src/ccenv/: __init__.py  cli.py
src/ccenv/cli/: __init__.py  main.py
src/ccenv/commands/: __init__.py  create.py  extract.py  list.py  show.py  use.py
src/ccenv/core/: __init__.py  merger.py  plugins.py  profile.py  resolver.py
src/ccenv/schemas/: profile.schema.json
src/ccenv/utils/: __init__.py  formatters.py  mcp_utils.py  validation.py  validators.py  yaml_utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_profile.py  test_validation.py
